--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "node --watch --env-file=.env server"
     },
     "dependencies": {
+        "axios": "^1.9.0",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
