--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server",
+    "start": "node server.js",
     "dev": "node --watch --env-file=.env server"
   },
   "dependencies": {
